I am horrible at committing things throughout the week. Lesson 7
